<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.connectwithfriends.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.connectwithfriends.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/activity_calendar">
        <action
            android:id="@id/nav_calendar"
            app:destination="@id/nav_calendar" />
    </fragment>
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.connectwithfriends.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.connectwithfriends.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.example.connectwithfriends.ui.achievements.AchievementsFragment"
        android:label="@string/menu_achievements"
        tools:layout="@layout/fragment_achievements" />
</navigation>